--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "3.0.0",
     "body-parser": "1.18.3",
+    "cors": "^2.8.5",
     "express": "4.16.3",
     "express-query-int": "3.0.0",
     "jsonwebtoken": "8.3.0",
