Create auth to localhost

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
-module.exports = { authSecret: process.env.AUTH_SECRET }
+const auth_secret = process.env.AUTH_SECRET ? process.env.AUTH_SECRET : 'a7IrUrCIg1RR'
+module.exports = { authSecret: auth_secret }
